--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,10 @@
 {
     "extends": "airbnb",
     "rules": {
+        "jsx-a11y/label-has-associated-control": "off",
+        "jsx-a11y/label-has-for":"off",
         "object-curly-newline": "off"
+        
     }
 }
   
