--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
     "rules": {
         "jsx-a11y/label-has-associated-control": "off",
         "jsx-a11y/label-has-for":"off",
-        "object-curly-newline": "off"
+        "object-curly-newline": "off",
+        "linebreak-style": 0
         
     }
 }
