--- a/.eslintrc
+++ b/.eslintrc
@@ -4,8 +4,8 @@
         "jsx-a11y/label-has-associated-control": "off",
         "jsx-a11y/label-has-for":"off",
         "object-curly-newline": "off",
-        "linebreak-style": 0
-        
+        "linebreak-style": 0,
+        "react/prop-types": "off"
     }
 }
   
