--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
         "linebreak-style": 0,
         "react/jsx-props-no-spreading": "off",
         "react/destructuring-assignment": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "max-len": "off"
     
     }
 }
