--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-tag-input-component": "^2.0.2",
+    "react-tagsinput": "^3.20.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
