--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.13.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-tag-input-component": "^2.0.2",
+    "socket.io-client": "^4.7.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
