--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "file-saver": "^2.0.5",
     "postcss": "^8.4.24",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
