--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-tag-input-component": "^2.0.2",
     "react-tagsinput": "^3.20.3",
+    "socket.io-client": "^4.7.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
